﻿----------------------
phpMyAdmin - ChangeLog
----------------------

$Id$
$Source$

2006-08-26 Marc Delisle  <lem9@users.sourceforge.net>
    * db_operations.php: bug #1544799, undefined variable on db copy
    * libraries/common.lib.php: bug #1544734, error messages link outdated,
      thanks to René Leonhardt
    * lang/norwegian: Update, thanks to Sven-Erik Andersen - sven-erik.
    * libraries/tbl_properties.inc.php: bug #1543996, wrong link for message,
      thanks to GerardW

2006-08-24 Michal Čihař  <michal@cihar.com>
    * Documentation.html, libraries/config.default.php,
      libraries/auth/signon.auth.lib.php, scripts/signon.php,
      scripts/setup.php: Add single signon authentication method (patch
      #1545366, patch #1541379, patch #1531302 and RFE #1031391).
    * libraries/auth/cookie.auth.lib.php, libraries/auth/http.auth.lib.php:
      Add support for LogoutURL.

2006-08-22 Marc Delisle  <lem9@users.sourceforge.net>
    * scripts/setup.php: bug #1536112, better fix (in case of 
      register_globals enabled), thanks to Michal
    ### 2.8.2.3 released from MAINT_2_8_2
    * scripts/setup.php: bug #1544692, version 2.8.2.3 breaks setup.php
      on a server with register_globals enabled, thanks to Juergen Windkiel
    ### 2.8.2.4 released from MAINT_2_8_2

2006-08-21 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/common.lib.php, libraries/auth/cookie.auth.lib.php:
      bug #1542875, Cookie auth on IIS

2006-08-20 Marc Delisle  <lem9@users.sourceforge.net>
    * lang/bulgarian: Update, thanks to Stanislav Yordanov - stanprog.

2006-08-18 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/export/pdf.php: do not display BLOBs on PDF export
    * lang/brazilian-portuguese: update, thanks to thedarkness
    * lang/catalan update, thanks to Xavier Navarro (xavin)

2006-08-16 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/sqlparser.lib.php: sorting on column header

2006-08-16 Michal Čihař  <michal@cihar.com>